# Hello_Triangle

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  CompilerMessages.h  EnumerateScheme.h  ErrorHandling.h  ExtensionLoader.h  FunctionTraits.h  HelloTriangle.cpp  LeanWindowsEnvironment.h  README.md  Vertex.h  VulkanEnvironment.h  compute.comp  compute.comp.spv  glfwPlatform.h  synchronizationTutorial.md  to_string.h  triangle.vert  triangle.vert.spv  win32Platform.h  xcbPlatform.h  xlibPlatform.h
.github/: FUNDING.yml
.github/workflows/: buildCI.yml
WSI/: Glfw.h  Win32.h  Xcb.h
doc/: synchronizationTutorial.md
src/: CompilerMessages.h  EnumerateScheme.h  ErrorHandling.h  ExtensionLoader.h  HelloTriangle.cpp  LeanWindowsEnvironment.h  VulkanEnvironment.h  VulkanIntrospection.h  VulkanReflection.h  Wsi.h
src/WSI/: DxgiWsi.h  Glfw.h  Wayland.h  Win32.h  Xcb.h  Xlib.h
src/WSI/private/: xdg-shell-client-protocol-private.inl
src/shaders/: hello_triangle.frag
